[package]
name = "guardian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.32.0",features = ["macros","rt","rt-multi-thread","net"]}
fastwebsockets = {version="0.4.4",features = ["upgrade"]}
futures-util = "0.3.28"
log = "0.4.20"
env_logger = "0.10.0"
rustls = "0.21.7"
rustls-pemfile = "1.0.3"
tokio-rustls = "0.24.1"
hyper = {version="0.14.27",features = ["server"]}
anyhow = "1.0.75"